<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.SearchFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/titleInputLayout"
        android:layout_width="0dp"
        android:layout_height="55dp"
        app:hintEnabled="false"
        app:boxCornerRadiusBottomEnd="25dp"
        app:boxCornerRadiusBottomStart="25dp"
        app:boxCornerRadiusTopEnd="25dp"
        app:boxCornerRadiusTopStart="25dp"
        app:boxStrokeColor="@color/md_theme_secondary"
        android:hint="@string/search_for_movies_series_etc"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="4dp">

        <EditText
            android:id="@+id/searchInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/search"
            android:drawableTint="@color/material_on_background_disabled"
            android:textColor="@color/md_theme_onBackground"
            android:autofillHints="name"
            android:hint="@string/search_for_movies_series_etc"
            android:inputType="text"/>
    </com.google.android.material.textfield.TextInputLayout>

    <!-- Empty State Layout -->
    <TextView
        android:id="@+id/emptyStateLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/empty_state_icon"
        android:drawablePadding="16dp"
        android:gravity="center"
        android:text="@string/nothing_to_show_here"
        android:textColor="@color/md_theme_onBackground"
        android:textSize="18sp"
        android:visibility="gone"
        app:drawableTint="@color/md_theme_onBackground"
        app:drawableTopCompat="@drawable/crocodile"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleInputLayout" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/search_recycler_view"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:clipToPadding="false"
        android:paddingBottom="90dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleInputLayout"
        app:layout_constraintVertical_bias="1.0" />
</androidx.constraintlayout.widget.ConstraintLayout>